fix: update href paths in navigation links for correct routing

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 			<nav class="menu">
 				<a
-					href="phone/index.html"
+					href="./phone/index.html"
 					class="menu-item"
 					id="link-phone"
 					aria-label="Перейти в раздел Смартфоны"
@@ -26,7 +26,7 @@
 					<span>Смартфоны</span>
 				</a>
 				<a
-					href="computers/index.html"
+					href="./computers/index.html"
 					class="menu-item"
 					id="link-computers"
 					aria-label="Перейти в раздел Компьютеры"
